--- a/pages/ind-hockey.html
+++ b/pages/ind-hockey.html
@@ -1,81 +1,94 @@
 <!DOCTYPE html>
 <html lang="es_ES">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
-        <title>Maharani Indumentaria</title>
-        <link rel="stylesheet" href="../css/style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap" rel="stylesheet">
-    </head>
 
-    <body>
-        <header id="menu">
-            <nav class="navbar">
-                <div class="logo"><img src="../img/logo.png" alt="Logo"></div>
-                <ul class="nav-links">
-                    <input type="checkbox" id="checkbox_toggle" />
-                    <label for="checkbox_toggle" class="hamburger">&#9776;</label>
-                    <div class="menu">
-                        <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="./quienes.html">¿Quiénes Somos?</a></li>
-                        <li class="menu_galeria">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
+    <title>Maharani Indumentaria</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
+</head>
+
+<body>
+    <header id="menu">
+        <nav class="navbar">
+            <div class="logo" data-aos="zoom-in"><img src="../img/logo.png" alt="Logo"></div>
+            <ul class="nav-links">
+                <input type="checkbox" id="checkbox_toggle" />
+                <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+                <div class="menu">
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="./quienes.html">¿Quiénes Somos?</a></li>
+                    <li class="menu_galeria">
                         <a href="#">Galería</a>
-                            <ul class="dropdown">
+                        <ul class="dropdown">
                             <li><a href="./ind-futbol.html">Indumentaria de Fútbol</a></li>
                             <li><a href="./ind-hockey.html">Indumentaira de Hockey</a></li>
                             <li><a href="./ind-polo.html">Indumentaria de Polo</a></li>
                             <li><a href="./tabla-talles.html">Tabla de Talles</a></li>
-                            </ul>
-                            </li>
-                        <li><a href="./presupuesto.html">Presupuesto</a></li>
-                        <li><a href="./contacto.html">Contacto</a></li>
-                    </div>
-                </ul>
-             </nav>
-        </header>
+                        </ul>
+                    </li>
+                    <li><a href="./presupuesto.html">Presupuesto</a></li>
+                    <li><a href="./contacto.html">Contacto</a></li>
+                </div>
+            </ul>
+        </nav>
+    </header>
 
-        <main>
-            <section class="titulo_2">
-                <h1>Indumentaria de Hockey</h1>
-            </section>
-    
-            <section class="galeria">
-                <h2>Galeria de Diseños</h2>
-                    <div class="container">
-                        <div>
-                            <img src="../img/fotos-hockey/camiseta1.jpg" alt="camiseta 1"> 
-                            <span>Camiseta Sublimada 1</span>
-                        </div>
-                        <div>
-                            <img src="../img/fotos-hockey/camiseta2.jpg" alt="camiseta 2">
-                            <span>Camiseta Sublimada 2</span>
-                        </div>
-                        <div>
-                            <img src="../img/fotos-hockey/camiseta3.jpg" alt="camiseta 3">
-                            <span>Camiseta Sublimada 3</span>
-                        </div>
-                        </div>
-                    </div>
-            </section>
+    <main>
+        <section class="titulo_2">
+            <h1>Indumentaria de Hockey</h1>
+        </section>
 
-            <section class="containerTop">
-                <a class="top" href="#top"> ↑ </a>
-            </section>
-        </main>
-
-        <footer>
-            <div class="redes">
-                <a href="https://www.facebook.com/maharani.indumentaria" target="blank"><img id="facebook" src="../img/socialn/facebook.png" alt="facebook"></a>
-                <a href="https://www.instagram.com/maharani.indumentaria/" target="blank"><img id="instagram" src="../img/socialn/Instagram.png" alt="instagram"></a>
-                <a href="https://twitter.com/MaharaniIndume1" target="blank"><img id="twitter" src="../img/socialn/twitter.png" alt="twitter"></a>
+        <section class="galeria">
+            <h2>Galeria de Diseños</h2>
+            <div class="container"data-aos="fade-up"
+            data-aos-anchor-placement="top-bottom">
+                <div>
+                    <img src="../img/fotos-hockey/camiseta1.jpg" alt="camiseta 1">
+                    <span>Camiseta Sublimada 1</span>
+                </div>
+                <div>
+                    <img src="../img/fotos-hockey/camiseta2.jpg" alt="camiseta 2">
+                    <span>Camiseta Sublimada 2</span>
+                </div>
+                <div>
+                    <img src="../img/fotos-hockey/camiseta3.jpg" alt="camiseta 3">
+                    <span>Camiseta Sublimada 3</span>
+                </div>
             </div>
-            <div>
-                <p class="copyRigth">Maharani Indumentaria &copy; 2022</p>
             </div>
-        </footer>
+        </section>
+
+        <section class="containerTop">
+            <a class="top" href="#top"> ↑ </a>
+        </section>
+    </main>
+
+    <footer>
+        <div class="redes">
+            <a href="https://www.facebook.com/maharani.indumentaria" target="blank"><img id="facebook"
+                    src="../img/socialn/facebook.png" alt="facebook"></a>
+            <a href="https://www.instagram.com/maharani.indumentaria/" target="blank"><img id="instagram"
+                    src="../img/socialn/Instagram.png" alt="instagram"></a>
+            <a href="https://twitter.com/MaharaniIndume1" target="blank"><img id="twitter"
+                    src="../img/socialn/twitter.png" alt="twitter"></a>
+        </div>
+        <div>
+            <p class="copyRigth">Maharani Indumentaria &copy; 2022</p>
+        </div>
+    </footer>
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+
 </body>
+
 </html>
