--- a/pages/ind-hockey.html
+++ b/pages/ind-hockey.html
@@ -1,94 +1,147 @@
 <!DOCTYPE html>
 <html lang="es_ES">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="./img/favicon.ico">
-    <title>Maharani Indumentaria</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap" rel="stylesheet">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
-</head>
-
-<body>
-    <header id="menu">
-        <nav class="navbar">
-            <div class="logo" data-aos="zoom-in"><img src="../img/logo.png" alt="Logo"></div>
-            <ul class="nav-links">
-                <input type="checkbox" id="checkbox_toggle" />
-                <label for="checkbox_toggle" class="hamburger">&#9776;</label>
-                <div class="menu">
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="./quienes.html">¿Quiénes Somos?</a></li>
-                    <li class="menu_galeria">
-                        <a href="#">Galería</a>
-                        <ul class="dropdown">
-                            <li><a href="./ind-futbol.html">Indumentaria de Fútbol</a></li>
-                            <li><a href="./ind-hockey.html">Indumentaira de Hockey</a></li>
-                            <li><a href="./ind-polo.html">Indumentaria de Polo</a></li>
-                            <li><a href="./tabla-talles.html">Tabla de Talles</a></li>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
+        <title>Maharani Indumentaria</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap" rel="stylesheet">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+        <link rel="stylesheet" href="../css/style.css">
+    </head>
+    
+    <body>
+    
+        <header>
+            <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
+                <div class="container-fluid">
+                    <a data-aos="zoom-in" class="navbar-brand logo" href="#"><img src="../img/logo.png" alt="Logo"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <div class="navbar-toggler-icon"></div>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./quienes.html">¿QUIENES SOMOS?</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">GALERÍA</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="./ind-futbol.html">Indumentaria de FÚTBOL</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="./ind-hockey.html">Indumentaria de HOCKEY</a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="./ind-polo.html">Indumentaria de POLO</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="./tabla-talles.html">Tabla de Talles</a></li>
+                                </ul>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./presupuesto.html">PRESUPUESTO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./contacto.html">CONTACTO</a>
+                            </li>
                         </ul>
-                    </li>
-                    <li><a href="./presupuesto.html">Presupuesto</a></li>
-                    <li><a href="./contacto.html">Contacto</a></li>
+                    </div>
                 </div>
-            </ul>
-        </nav>
-    </header>
+            </nav>
+        </header>
 
     <main>
-        <section class="titulo_2">
+        <section class="titulo" data-aos="fade-down">
             <h1>Indumentaria de Hockey</h1>
         </section>
 
         <section class="galeria">
             <h2>Galeria de Diseños</h2>
-            <div class="container"data-aos="fade-up"
+            <div class="container_gal"data-aos="fade-left"
             data-aos-anchor-placement="top-bottom">
                 <div>
                     <img src="../img/fotos-hockey/camiseta1.jpg" alt="camiseta 1">
-                    <span>Camiseta Sublimada 1</span>
+                    <div class="desc">Camiseta Sublimada 1</div>
                 </div>
                 <div>
                     <img src="../img/fotos-hockey/camiseta2.jpg" alt="camiseta 2">
-                    <span>Camiseta Sublimada 2</span>
+                    <div class="desc">Camiseta Sublimada 2</div>
                 </div>
                 <div>
                     <img src="../img/fotos-hockey/camiseta3.jpg" alt="camiseta 3">
-                    <span>Camiseta Sublimada 3</span>
+                    <div class="desc">Camiseta Sublimada 3</div>
                 </div>
             </div>
             </div>
         </section>
 
-        <section class="containerTop">
-            <a class="top" href="#top"> ↑ </a>
-        </section>
-    </main>
+        <button type="button" class="btn btn-warning btn-floating btn-sm" id="btn-back-to-top">
+            <i class="bi bi-arrow-up"></i>
+        </button>
+</main>
 
-    <footer>
-        <div class="redes">
-            <a href="https://www.facebook.com/maharani.indumentaria" target="blank"><img id="facebook"
-                    src="../img/socialn/facebook.png" alt="facebook"></a>
-            <a href="https://www.instagram.com/maharani.indumentaria/" target="blank"><img id="instagram"
-                    src="../img/socialn/Instagram.png" alt="instagram"></a>
-            <a href="https://twitter.com/MaharaniIndume1" target="blank"><img id="twitter"
-                    src="../img/socialn/twitter.png" alt="twitter"></a>
+<footer>
+    <div class="container">
+        <div class="row fluid">
+            <div class="col col-sm-3 redes">
+                <p><i class="bi bi-link"></i>Seguinos en Nuestras Redes:</p>
+                <a href="https://www.facebook.com/maharani.indumentaria" target="blank"><i
+                        class="bi bi-facebook"></i>/maharani</a>
+                <a href="https://www.instagram.com/maharani.indumentaria/" target="blank"><i
+                        class="bi bi-instagram"></i>/maharani</a>
+                <a href="https://twitter.com/MaharaniIndume1" target="blank"><i
+                        class="bi bi-twitter"></i>/maharani</a>
+            </div>
+            <div class="col col-sm-3 pago">
+                <p><i class="bi bi-wallet2"></i></i>Medios de Pago:</p>
+                <img src="../img/footer/f_pago.png" alt="pago">
+            </div>
+            <div class="col col-sm-3 envio">
+                <p><i class="bi bi-truck"></i></i>Metodos de Envío:</p>
+                <a href="http://tascar.com.ar/" target="blank">Expreso T.A.S.</a>
+                <a href="https://www.viacargo.com.ar/" target="blank">Vía Cargo</a>
+                <a href="https://www.correoargentino.com.ar/seguimiento-de-envios" target="blank">Correo Argentino</a>
+                <a href="https://www.oca.com.ar/Busquedas/Envios" target="blank">OCA</a>
+            </div>
+            <div class="col col-sm-3 telefono">
+                <p><i class="bi bi-phone"></i>Teléfono:</p>
+                <p><a href="https://api.whatsapp.com/send?phone=5492926497162"><i
+                            class="bi bi-whatsapp"></i></a>02926 -
+                    15 - 497162</p>
+            </div>
         </div>
-        <div>
-            <p class="copyRigth">Maharani Indumentaria &copy; 2022</p>
+        <div class="row fluid">
+            <div class="copyRigth">
+                <p>Maharani Indumentaria &copy; 2022</p>
+            </div>
         </div>
-    </footer>
+    </div>
+</footer>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
-
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+    integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+</script>
+<script src="../js/back_to_top.js"></script>
 </body>
 
 </html>
