--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -79,7 +79,7 @@
                     </div>
                     <div>
                         <h3>Teléfono</h3>
-                        <p class="telefono"> 02926 15 497162 <a
+                        <p class="telefono_ctc"> 02926 15 497162 <a
                                 href="https://api.whatsapp.com/send?phone=5492926497162&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20sus%202productos%202."
                                 target="_blank"><i class="bi bi-whatsapp"></i></a></p>
                     </div>
