cambio fondos y ajustes menores

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -80,7 +80,7 @@
                     <div>
                         <h3>Teléfono</h3>
                         <p class="telefono_ctc"> 02926 15 497162 <a
-                                href="https://api.whatsapp.com/send?phone=5492926497162&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20sus%202productos%202."
+                                href="https://api.whatsapp.com/send?phone=5492926497162&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20sus%20productos%20."
                                 target="_blank"><i class="bi bi-whatsapp"></i></a></p>
                     </div>
                     <div>
@@ -150,15 +150,15 @@
                 <div class="col col-sm-3 redes">
                     <p><i class="bi bi-link"></i>Seguinos en Nuestras Redes:</p>
                     <a href="https://www.facebook.com/maharani.indumentaria" target="blank"><i
-                            class="bi bi-facebook"></i>/maharani</a>
+                            class="bi bi-facebook"></i>/maharani.indumentaria</a>
                     <a href="https://www.instagram.com/maharani.indumentaria/" target="blank"><i
-                            class="bi bi-instagram"></i>/maharani</a>
+                            class="bi bi-instagram"></i>/maharani.indumentaria</a>
                     <a href="https://twitter.com/MaharaniIndume1" target="blank"><i
-                            class="bi bi-twitter"></i>/maharani</a>
+                            class="bi bi-twitter"></i>/MaharaniIndume1</a>
                 </div>
                 <div class="col col-sm-3 pago">
                     <p><i class="bi bi-wallet2"></i></i>Medios de Pago:</p>
-                    <img src="../img/footer/f_pago.png" alt="pago">
+                    <img class="mpago" src="../img/footer/f_pago.png" alt="pago">
                 </div>
                 <div class="col col-sm-3 envio">
                     <p><i class="bi bi-truck"></i></i>Metodos de Envío:</p>
