--- a/pages/presupuesto.html
+++ b/pages/presupuesto.html
@@ -125,7 +125,7 @@
                         <button_f type="reset" class="boton_form">Borrar todo</button_f>
                     </div>
                 </section>
-              
+
             </div>
         </div>
         <button type="button" class="btn btn-warning btn-floating btn-sm" id="btn-back-to-top">
@@ -139,15 +139,15 @@
                 <div class="col col-sm-3 redes">
                     <p><i class="bi bi-link"></i>Seguinos en Nuestras Redes:</p>
                     <a href="https://www.facebook.com/maharani.indumentaria" target="blank"><i
-                            class="bi bi-facebook"></i>/maharani</a>
+                            class="bi bi-facebook"></i>/maharani.indumentaria</a>
                     <a href="https://www.instagram.com/maharani.indumentaria/" target="blank"><i
-                            class="bi bi-instagram"></i>/maharani</a>
+                            class="bi bi-instagram"></i>/maharani.indumentaria</a>
                     <a href="https://twitter.com/MaharaniIndume1" target="blank"><i
-                            class="bi bi-twitter"></i>/maharani</a>
+                            class="bi bi-twitter"></i>/MaharaniIndume1</a>
                 </div>
                 <div class="col col-sm-3 pago">
                     <p><i class="bi bi-wallet2"></i></i>Medios de Pago:</p>
-                    <img src="../img/footer/f_pago.png" alt="pago">
+                    <img class="mpago" src="../img/footer/f_pago.png" alt="pago">
                 </div>
                 <div class="col col-sm-3 envio">
                     <p><i class="bi bi-truck"></i></i>Metodos de Envío:</p>
