--- a/pages/quienes.html
+++ b/pages/quienes.html
@@ -79,10 +79,10 @@
                     <p>Somos una marca innovadora, creativa y comprometida en brindar las mejores soluciones en prendas
                         deportivas.</p>
                 </div>
-                
-                    <img class="col-md-6" id="taller" src="../img/fotos-quienes/taller1.jpg" alt="Costura"
-                        data-aos="flip-right">
-                
+
+                <img class="col-md-6" id="taller" src="../img/fotos-quienes/taller1.jpg" alt="Costura"
+                    data-aos="flip-right">
+
         </div>
         </section>
         <button type="button" class="btn btn-warning btn-floating btn-sm" id="btn-back-to-top">
@@ -97,21 +97,22 @@
                 <div class="col col-sm-3 redes">
                     <p><i class="bi bi-link"></i>Seguinos en Nuestras Redes:</p>
                     <a href="https://www.facebook.com/maharani.indumentaria" target="blank"><i
-                            class="bi bi-facebook"></i>/maharani</a>
+                            class="bi bi-facebook"></i>/maharani.indumentaria</a>
                     <a href="https://www.instagram.com/maharani.indumentaria/" target="blank"><i
-                            class="bi bi-instagram"></i>/maharani</a>
+                            class="bi bi-instagram"></i>/maharani.indumentaria</a>
                     <a href="https://twitter.com/MaharaniIndume1" target="blank"><i
-                            class="bi bi-twitter"></i>/maharani</a>
+                            class="bi bi-twitter"></i>/MaharaniIndume1</a>
                 </div>
                 <div class="col col-sm-3 pago">
                     <p><i class="bi bi-wallet2"></i></i>Medios de Pago:</p>
-                    <img src="../img/footer/f_pago.png" alt="pago">
+                    <img class="mpago" src="../img/footer/f_pago.png" alt="pago">
                 </div>
                 <div class="col col-sm-3 envio">
                     <p><i class="bi bi-truck"></i></i>Metodos de Envío:</p>
                     <a href="http://tascar.com.ar/" target="blank">Expreso T.A.S.</a>
                     <a href="https://www.viacargo.com.ar/" target="blank">Vía Cargo</a>
-                    <a href="https://www.correoargentino.com.ar/seguimiento-de-envios" target="blank">Correo Argentino</a>
+                    <a href="https://www.correoargentino.com.ar/seguimiento-de-envios" target="blank">Correo
+                        Argentino</a>
                     <a href="https://www.oca.com.ar/Busquedas/Envios" target="blank">OCA</a>
                 </div>
                 <div class="col col-sm-3 telefono">
