--- a/index.html
+++ b/index.html
@@ -211,13 +211,14 @@
                 </div>
                 <div class="col col-sm-3 pago">
                     <p><i class="bi bi-wallet2"></i></i>Medios de Pago:</p>
-                    <img src="./img/footer/f_pago.png" alt="pago">
+                    <img class="mpago" src="./img/footer/f_pago.png" alt="pago">
                 </div>
                 <div class="col col-sm-3 envio">
                     <p><i class="bi bi-truck"></i></i>Metodos de Envío:</p>
                     <a href="http://tascar.com.ar/" target="blank">Expreso T.A.S.</a>
                     <a href="https://www.viacargo.com.ar/" target="blank">Vía Cargo</a>
-                    <a href="https://www.correoargentino.com.ar/seguimiento-de-envios" target="blank">Correo Argentino</a>
+                    <a href="https://www.correoargentino.com.ar/seguimiento-de-envios" target="blank">Correo
+                        Argentino</a>
                     <a href="https://www.oca.com.ar/Busquedas/Envios" target="blank">OCA</a>
                 </div>
                 <div class="col col-sm-3 telefono">
