correccion de scroll vertican en mobile y font sizes

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -129,7 +129,7 @@
                                 <textarea name="introducir_mensaje" class="texto_mensaje" id="mensaje"
                                     required="obligatorio" placeholder="Deja tu comentario..."></textarea>
                             </p>
-                            <button_f type="submit" name="enviar_formulario" id="enviar" class="form_btn">
+                            <button_f type="submit" name="enviar_formulario" id="enviar" class="boton_form">
                                 <p>Enviar</p>
                             </button_f>
                             <p class="aviso"><span class="obligatorio"> * </span>los campos son obligatorios.
