aplico correcciones al codigo HTML

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es_ES">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -145,16 +145,16 @@
                     </button>
                 </section>
             </div>
-
+        </div>
             <div class="row">
-                <section id="descripcion" class="col intro">
+                <div id="descripcion" class="col intro">
                     <p>Elegí los colores y el diseño que más te gusten de nuestro catálogo, o proponenos
                         el tuyo y
                         lo
                         armamos a tu gusto. Consultanos por Buzos de Egresados, Gorras personalizadas y mucho más.
                     </p>
 
-                </section>
+                </div>
             </div>
             <div class="row">
                 <section class="proceso col-md-6">
@@ -210,11 +210,11 @@
                             class="bi bi-twitter"></i>/MaharaniIndume1</a>
                 </div>
                 <div class="col col-sm-3 pago">
-                    <p><i class="bi bi-wallet2"></i></i>Medios de Pago:</p>
+                    <p><i class="bi bi-wallet2"></i>Medios de Pago:</p>
                     <img class="mpago" src="./img/footer/f_pago.png" alt="pago">
                 </div>
                 <div class="col col-sm-3 envio">
-                    <p><i class="bi bi-truck"></i></i>Metodos de Envío:</p>
+                    <p><i class="bi bi-truck"></i>Metodos de Envío:</p>
                     <a href="http://tascar.com.ar/" target="blank">Expreso T.A.S.</a>
                     <a href="https://www.viacargo.com.ar/" target="blank">Vía Cargo</a>
                     <a href="https://www.correoargentino.com.ar/seguimiento-de-envios" target="blank">Correo
