--- a/pages/quienes.html
+++ b/pages/quienes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es_ES">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -70,7 +70,7 @@
                     <h1>¿Quiénes Somos?</h1>
                 </section>
             </div>
-            <section class="quienes row">
+            <div class="quienes row">
                 <div class="quienesTexto col-md-6" data-aos="flip-left">
                     <p>MAHARANI Indumentaria es una fábrica familiar fundada en 1986, que trabaja para ofrecerle los
                         mejores
@@ -83,11 +83,10 @@
                 <img class="col-md-6" id="taller" src="../img/fotos-quienes/taller1.jpg" alt="Costura"
                     data-aos="flip-right">
 
-        </div>
-        </section>
-        <button type="button" class="btn btn-warning btn-floating btn-sm" id="btn-back-to-top">
-            <i class="bi bi-arrow-up"></i>
-        </button>
+            </div>
+            <button type="button" class="btn btn-warning btn-floating btn-sm" id="btn-back-to-top">
+                <i class="bi bi-arrow-up"></i>
+            </button>
         </div>
     </main>
 
@@ -104,11 +103,11 @@
                             class="bi bi-twitter"></i>/MaharaniIndume1</a>
                 </div>
                 <div class="col col-sm-3 pago">
-                    <p><i class="bi bi-wallet2"></i></i>Medios de Pago:</p>
+                    <p><i class="bi bi-wallet2"></i>Medios de Pago:</p>
                     <img class="mpago" src="../img/footer/f_pago.png" alt="pago">
                 </div>
                 <div class="col col-sm-3 envio">
-                    <p><i class="bi bi-truck"></i></i>Metodos de Envío:</p>
+                    <p><i class="bi bi-truck"></i>Metodos de Envío:</p>
                     <a href="http://tascar.com.ar/" target="blank">Expreso T.A.S.</a>
                     <a href="https://www.viacargo.com.ar/" target="blank">Vía Cargo</a>
                     <a href="https://www.correoargentino.com.ar/seguimiento-de-envios" target="blank">Correo
