--- a/pages/tabla-talles.html
+++ b/pages/tabla-talles.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es_ES">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -67,7 +67,7 @@
         <section class="titulo" data-aos="fade-down">
             <h1>Tabla de Talles</h1>
         </section>
-        <section>
+        <div>
             <table>
                 <tr>
                     <th>FEMENINO</th>
@@ -106,11 +106,11 @@
                     <td>132</td>
                 </tr>
             </table>
-        </section>
+        </div>
         <div>
             <hr>
         </div>
-        <section>
+        <div>
             <table>
                 <tr>
                     <th>MASCULINO</th>
@@ -149,7 +149,7 @@
                     <td>130</td>
                 </tr>
             </table>
-        </section>
+        </div>
         <button type="button" class="btn btn-warning btn-floating btn-sm" id="btn-back-to-top">
             <i class="bi bi-arrow-up"></i>
         </button>
@@ -168,11 +168,11 @@
                             class="bi bi-twitter"></i>/MaharaniIndume1</a>
                 </div>
                 <div class="col col-sm-3 pago">
-                    <p><i class="bi bi-wallet2"></i></i>Medios de Pago:</p>
+                    <p><i class="bi bi-wallet2"></i>Medios de Pago:</p>
                     <img class="mpago" src="../img/footer/f_pago.png" alt="pago">
                 </div>
                 <div class="col col-sm-3 envio">
-                    <p><i class="bi bi-truck"></i></i>Metodos de Envío:</p>
+                    <p><i class="bi bi-truck"></i>Metodos de Envío:</p>
                     <a href="http://tascar.com.ar/" target="blank">Expreso T.A.S.</a>
                     <a href="https://www.viacargo.com.ar/" target="blank">Vía Cargo</a>
                     <a href="https://www.correoargentino.com.ar/seguimiento-de-envios" target="blank">Correo
