Aplico maps, mixins y keywords para SEO

--- a/pages/ind-polo.html
+++ b/pages/ind-polo.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
     <title>Maharani Indumentaria</title>
+    <meta name="description" content="Indumentaria de Polo Personalizada">
+    <meta name="keywords" content="indumentaria, camiseta, polo, personalizada, chukker, caballos">
+    <meta name="google-site-verification" content="j_K_alRuwYCx3pJ8AFa5ylEMd3STr9PaL3rfYu2akbM" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap" rel="stylesheet">
@@ -95,11 +98,11 @@
             <div class="row fluid">
                 <div class="col col-sm-3 redes">
                     <p><i class="bi bi-link"></i>Seguinos en Nuestras Redes:</p>
-                    <a href="https://www.facebook.com/maharani.indumentaria" target="blank"><i
+                    <a class="facebook" href="https://www.facebook.com/maharani.indumentaria" target="blank"><i
                             class="bi bi-facebook"></i>/maharani.indumentaria</a>
-                    <a href="https://www.instagram.com/maharani.indumentaria/" target="blank"><i
+                    <a class="instagram" href="https://www.instagram.com/maharani.indumentaria/" target="blank"><i
                             class="bi bi-instagram"></i>/maharani.indumentaria</a>
-                    <a href="https://twitter.com/MaharaniIndume1" target="blank"><i
+                    <a class="twitter" href="https://twitter.com/MaharaniIndume1" target="blank"><i
                             class="bi bi-twitter"></i>/MaharaniIndume1</a>
                 </div>
                 <div class="col col-sm-3 pago">
@@ -116,14 +119,15 @@
                 </div>
                 <div class="col col-sm-3 telefono">
                     <p><i class="bi bi-phone"></i>Teléfono:</p>
-                    <p><a href="https://api.whatsapp.com/send?phone=5492926497162"><i
+                    <p class="whatsapp"><a href="https://api.whatsapp.com/send?phone=5492926497162"><i
                                 class="bi bi-whatsapp"></i></a>02926 -
                         15 - 497162</p>
                 </div>
             </div>
             <div class="row fluid">
                 <div class="copyRigth">
-                    <p>Maharani Indumentaria &copy; 2022</p>
+                    <strong>Maharani Indumentaria &copy; 2022</strong>
+                    <p>Simón Bolívar 637, (7540) Coronel Suárez, Provincia de Buenos Aires.</p>
                 </div>
             </div>
         </div>
