--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <header>
         <!-- barra de navegación BS -->
 
-        <nav class="navbar sticky-top navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
-                <a data-aos="zoom-in" class="navbar-brand logo" href="#"><img src="./img/logo.png" alt="Logo"></a>
+                <a data-aos="zoom-in" class="navbar-brand logo" href="./index.html"><img src="./img/logo.png" alt="Logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -108,43 +108,43 @@
                         <div class="carousel-item active">
                             <img src="./img/fotos-home/fulbo1.jpg" class="d-block w-100" alt="Futbol 1">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Indumentaria de Fútbol</h5>
+                                <h4>Indumentaria de Fútbol</h4>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="./img/fotos-home/fulbo2.jpg" class="d-block w-100" alt="Futbol 2">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>¡Totalmente Personalizada!</h5>
+                                <h4>¡Totalmente Personalizada!</h4>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="./img/fotos-home/hockey1.jpg" class="d-block w-100" alt="Hockey 1">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Indumentaria de Hockey</h5>
+                                <h4>Indumentaria de Hockey</h4>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="./img/fotos-home/hockey2.jpg" class="d-block w-100" alt="Hockey 2">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Hacemos Realidad tus Ideas!</h5>
+                                <h4>Hacemos Realidad tus Ideas!</h4>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="./img/fotos-home/polo1.jpg" class="d-block w-100" alt="Polo 1">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Indumentaria de Polo</h5>
+                                <h4>Indumentaria de Polo</h4>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="./img/fotos-home/polo2.jpg" class="d-block w-100" alt="Polo 2">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>¡Vos Elegis el Diseño!</h5>
+                                <h4>¡Vos Elegis el Diseño!</h4>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img src="./img/fotos-home/multideportes.jpg" class="d-block w-100" alt="Otros">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Consulta por Indumentaria de Otras Disciplinas</h5>
+                                <h4>Consulta por Indumentaria de Otras Disciplinas</h4>
                             </div>
                         </div>
                     </div>
