--- a/pages/ind-polo.html
+++ b/pages/ind-polo.html
@@ -28,7 +28,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
-                <a data-aos="zoom-in" class="navbar-brand logo" href="#"><img src="../img/logo.png" alt="Logo"></a>
+                <a data-aos="zoom-in" class="navbar-brand logo" href="../index.html"><img src="../img/logo.png" alt="Logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
