corr en contacto, pres y qs

--- a/pages/quienes.html
+++ b/pages/quienes.html
@@ -27,7 +27,8 @@
         <!-- barra de navegación BS -->
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
-                <a data-aos="zoom-in" class="navbar-brand logo" href="../index.html"><img src="../img/logo.png" alt="Logo"></a>
+                <a data-aos="zoom-in" class="navbar-brand logo" href="../index.html"><img src="../img/logo.png"
+                        alt="Logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -72,34 +73,29 @@
     </header>
 
     <main>
-        <!-- grid system de BS -->
 
-        <div class="container fluid">
-            <div class="row">
-                <section class="col-12 titulo" data-aos="fade-down">
-                    <h1>¿Quiénes Somos?</h1>
-                </section>
+        <section class="titulo" data-aos="fade-down">
+            <h1>¿Quiénes Somos?</h1>
+        </section>
+        <div class="quienes">
+            <div class="quienesTexto" data-aos="flip-left">
+                <p>MAHARANI Indumentaria es una fábrica familiar fundada en 1986, que trabaja para ofrecerle los
+                    mejores
+                    productos, de la mejor calidad textil y los mejores precios.</p>
+                <p>Cada etapa del diseño y producción para asegurar una excelente calidad.</p>
+                <p>Somos una marca innovadora, creativa y comprometida en brindar las mejores soluciones en prendas
+                    deportivas.</p>
             </div>
-            <div class="quienes row">
-                <div class="quienesTexto col-md-6" data-aos="flip-left">
-                    <p>MAHARANI Indumentaria es una fábrica familiar fundada en 1986, que trabaja para ofrecerle los
-                        mejores
-                        productos, de la mejor calidad textil y los mejores precios.</p>
-                    <p>Cada etapa del diseño y producción para asegurar una excelente calidad.</p>
-                    <p>Somos una marca innovadora, creativa y comprometida en brindar las mejores soluciones en prendas
-                        deportivas.</p>
-                </div>
-
-                <img class="col-md-6" id="taller" src="../img/fotos-quienes/taller1.jpg" alt="foto taller"
-                    data-aos="flip-right">
-
+            <div id="taller">
+                <img src="../img/fotos-quienes/taller1.jpg" alt="foto taller" data-aos="flip-right">
             </div>
-
-            <!-- botón volver arriba -->
-            <button type="button" class="btn btn-floating btn-sm" id="btn-back-to-top">
-                <i class="bi bi-arrow-up"></i>
-            </button>
         </div>
+
+        <!-- botón volver arriba -->
+        <button type="button" class="btn btn-floating btn-sm" id="btn-back-to-top">
+            <i class="bi bi-arrow-up"></i>
+        </button>
+
     </main>
 
     <!-- pie de página -->
@@ -144,7 +140,7 @@
         </div>
     </footer>
 
-     <!-- scripts -->
+    <!-- scripts -->
 
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
